Aligned date correctly

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body nav .date {
   position: absolute;
   right: 14vw;
   top: 12%;
+  margin-top: 10px;
   font-size: 18px;
   font-weight: 700;
   display: flex;
@@ -211,10 +212,6 @@ form {
 .absolute-bottom {
   position: absolute;
   bottom: 15%;
-}
-
-.title h1 {
-  font-size: 27px;
 }
 
 .all-books {
